[package]
name = "adnl"
description = "Implementation of Abstract Datagram Network Layer"
repository = "https://github.com/tonstack/adnl-rs"
keywords = ["ton"]
categories = ["network-programming"]
license = "MIT"
version = "1.0.0"
authors = ["Vladimir Lebedev <d3fl4t3@gmail.com>"]
edition = "2021"

[dependencies]
sha2 = "0.10.2"
ctr = "0.9.1"
aes = "0.8.1"
log = "0.4.14"
rand_core = "0.6.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"], optional = true }
curve25519-dalek = { version = "4.1.2", optional = true }
tokio = { version = "1", features = ["net", "io-util"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
thiserror = "1"
rand = "0.8.5"
futures = "0.3"
pin-project = "1"
hex = "0.4.3"

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"]}
base64 = "0.13.0"

[features]
default = ["dalek"]
dalek = ["x25519-dalek", "curve25519-dalek"]

[[example]]
name = "time"
